--- a/README.Rmd
+++ b/README.Rmd
@@ -13,20 +13,20 @@ knitr::opts_chunk$set(
 )
 ```
 
-# MultiMed
+# hdmed
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of MultiMed is to ...
+The goal of hdmed is to ...
 
 ## Installation
 
-You can install the development version of MultiMed from [GitHub](https://github.com/) with:
+You can install the development version of hdmed from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("dclarkboucher/MultiMed")
+devtools::install_github("dclarkboucher/hdmed")
 ```
 
 ## Example
@@ -34,9 +34,8 @@ devtools::install_github("dclarkboucher/MultiMed")
 This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
-library(MultiMed)
-
-
+library(hdmed)
+## basic example code
 ```
 
 What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
@@ -47,10 +46,3 @@ summary(cars)
 
 You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
 
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
