--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,13 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of hdmed is to ...
+Our package offers a suite of functions for performing mediation analysis with
+high-dimensional mediators. Unlike methods for single-mediator mediation
+analysis---which have been distributed by packages such as "[psych](https://CRAN.R-project.org/package=psych)," "[mediation](https://CRAN.R-project.org/package=mediation),"
+"[medScan](https://CRAN.R-project.org/package=medScan)"---our package 
+focuses on settings whether there are many potential mediators that need 
+evaluating simultaneously, a topic which has recently become the focus of prolific
+and exciting methodological work. 
 
 ## Installation
 
@@ -31,7 +37,17 @@ devtools::install_github("dclarkboucher/hdmed")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+To demonstrate high-dimensional mediation analysis with an example, let 
+$\mathbf{M}$ be a set of $p$ variables, each a potential mediator in the causal
+pathway between exposure $A$ and outcome $Y$, and let $\mathbb{C}$ be a set
+of $q$ covariates, $q$ reasonably small. Then, given data on individuals
+$i\in\{1,\dots,n\}$, with $n$ potentially but not necessarily less than $p$, we 
+can evaluate the mediating role of $M$ with the models
+
+\begin{equation}
+A = B
+\end{equation}
+
 
 ```{r example}
 library(hdmed)
